--- a/soprano-smm/css/style.css
+++ b/soprano-smm/css/style.css
@@ -87,10 +87,85 @@ body {
   background: #171717;
 }
 
+@-webkit-keyframes load {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes load {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+@-webkit-keyframes light-red {
+  0% {
+    text-shadow: 0px 0px 0px #F15946;
+  }
+  50% {
+    text-shadow: 0px 0px 30px #f15a46;
+  }
+  100% {
+    text-shadow: 0px 0px 0px #F15946;
+  }
+}
+@keyframes light-red {
+  0% {
+    text-shadow: 0px 0px 0px #F15946;
+  }
+  50% {
+    text-shadow: 0px 0px 30px #f15a46;
+  }
+  100% {
+    text-shadow: 0px 0px 0px #F15946;
+  }
+}
+@-webkit-keyframes light-white {
+  0% {
+    text-shadow: 0px 0px 0px #FFF;
+  }
+  50% {
+    text-shadow: 0px 0px 30px #FFF;
+  }
+  100% {
+    text-shadow: 0px 0px 0px #FFF;
+  }
+}
+@keyframes light-white {
+  0% {
+    text-shadow: 0px 0px 0px #FFF;
+  }
+  50% {
+    text-shadow: 0px 0px 30px #FFF;
+  }
+  100% {
+    text-shadow: 0px 0px 0px #FFF;
+  }
+}
 .loading {
   position: fixed;
   width: 100%;
   height: 100%;
+  top: 0px;
+  left: 0px;
   background: #171717;
   z-index: 40;
   display: -webkit-box;
@@ -102,10 +177,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  display: none;
 }
 .loading__text {
   position: relative;
+  -webkit-animation: load 2s ease-in-out infinite;
+          animation: load 2s ease-in-out infinite;
 }
 .loading__text p {
   font-family: "Lacquer", system-ui;
